wechat_automation_log.txt
[2025-05-08 13:19:17] 步骤1: 开始获取微信输入框坐标
[2025-05-08 13:19:17] 坐标获取脚本已创建
[2025-05-08 13:19:17] 坐标获取脚本输出:
  File "/Users/zzy/hope/rpa/get_wechat_coords.py", line 9
    print(f"{i}...")
    ^^^^^
IndentationError: expected an indented block after 'for' statement on line 8
[2025-05-08 13:19:17] 错误: 未能获取坐标，无法继续执行
[2025-05-08 13:19:17] 自动化流程完成。结束时间: 2025-05-08 13:19:17
[2025-05-08 13:19:17] --------------------------------------------------
